--- a/kube/crd/bases/multicluster.harmonycloud.cn_multiclusterresources.yaml
+++ b/kube/crd/bases/multicluster.harmonycloud.cn_multiclusterresources.yaml
@@ -38,6 +38,22 @@ spec:
                 type: string
               resource:
                 type: object
+              resourceRef:
+                description: GroupVersionKind unambiguously identifies a kind.  It
+                  doesn't anonymously include GroupVersion to avoid automatic coersion.  It
+                  doesn't use a GroupVersion to avoid custom marshalling
+                properties:
+                  group:
+                    type: string
+                  kind:
+                    type: string
+                  version:
+                    type: string
+                required:
+                - group
+                - kind
+                - version
+                type: object
               workload:
                 type: boolean
             type: object
