--- a/kube/crd/bases/multicluster.harmonycloud.cn_clustersets.yaml
+++ b/kube/crd/bases/multicluster.harmonycloud.cn_clustersets.yaml
@@ -14,7 +14,7 @@ spec:
     listKind: ClusterSetList
     plural: clustersets
     singular: clusterset
-  scope: Namespaced
+  scope: Cluster
   versions:
   - name: v1alpha1
     schema:
