--- a/kube/crd/bases/multicluster.harmonycloud.cn_clusterresources.yaml
+++ b/kube/crd/bases/multicluster.harmonycloud.cn_clusterresources.yaml
@@ -50,6 +50,8 @@ spec:
         type: object
     served: true
     storage: true
+    subresources:
+      status: {}
 status:
   acceptedNames:
     kind: ""
