--- a/kube/crd/bases/multicluster.harmonycloud.cn_clusterresources.yaml
+++ b/kube/crd/bases/multicluster.harmonycloud.cn_clusterresources.yaml
@@ -36,6 +36,7 @@ spec:
             properties:
               resource:
                 type: object
+                x-kubernetes-preserve-unknown-fields: true
             type: object
           status:
             properties:
