--- a/kube/crd/bases/multicluster.harmonycloud.cn_clusters.yaml
+++ b/kube/crd/bases/multicluster.harmonycloud.cn_clusters.yaml
@@ -39,6 +39,7 @@ spec:
                   properties:
                     info:
                       type: object
+                      x-kubernetes-preserve-unknown-fields: true
                     name:
                       type: string
                   required:
