--- a/kube/crd/bases/multicluster.harmonycloud.cn_multiclusterresources.yaml
+++ b/kube/crd/bases/multicluster.harmonycloud.cn_multiclusterresources.yaml
@@ -38,6 +38,7 @@ spec:
                 type: string
               resource:
                 type: object
+                x-kubernetes-preserve-unknown-fields: true
               resourceRef:
                 description: GroupVersionKind unambiguously identifies a kind.  It
                   doesn't anonymously include GroupVersion to avoid automatic coersion.  It
