--- a/kube/deploy/core/webhook-service.yaml
+++ b/kube/deploy/core/webhook-service.yaml
@@ -15,6 +15,6 @@ spec:
     - port: 8080
       targetPort: 8080
       protocol: TCP
-      name: grcp
+      name: grpc
   selector:
     app: stellaris-core-manager
