--- a/kube/deploy/core/deployment-stellaris-core.yaml
+++ b/kube/deploy/core/deployment-stellaris-core.yaml
@@ -1,4 +1,11 @@
 apiVersion: v1
+kind: Namespace
+metadata:
+  name: stellaris-system
+
+---
+
+apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: stellaris-core-manager
