add addons loader cm and fix agent chart

--- a/charts/stellaris-core/crds/multicluster.harmonycloud.cn_multiclusterresourcebindings.yaml
+++ b/charts/stellaris-core/crds/multicluster.harmonycloud.cn_multiclusterresourcebindings.yaml
@@ -57,6 +57,8 @@ spec:
                       type: array
                     name:
                       type: string
+                    namespace:
+                      type: string
                   type: object
                 type: array
             type: object
