--- a/kube/crd/bases/multicluster.harmonycloud.cn_multiclusterresourcebindings.yaml
+++ b/kube/crd/bases/multicluster.harmonycloud.cn_multiclusterresourcebindings.yaml
@@ -57,6 +57,8 @@ spec:
                       type: array
                     name:
                       type: string
+                    namespace:
+                      type: string
                   type: object
                 type: array
             type: object
