--- a/charts/stellaris-core/templates/webhook/job-patch/webhook-job-createSecret.yaml
+++ b/charts/stellaris-core/templates/webhook/job-patch/webhook-job-createSecret.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: create-secret
-        image: wonderflow/kube-webhook-certgen:v2.1
+        image: {{ .Values.webhook.image.registry }}/{{ .Values.webhook.image.repository }}:{{ .Values.webhook.image.tag }}
         imagePullPolicy: IfNotPresent
         args:
         - create
