feat: webhook schedulePolicy/cluster validate

--- a/kube/crd/bases/multicluster.harmonycloud.cn_multiclusterresourcebindings.yaml
+++ b/kube/crd/bases/multicluster.harmonycloud.cn_multiclusterresourcebindings.yaml
@@ -41,7 +41,11 @@ spec:
                       items:
                         properties:
                           name:
+                            description: Name of target cluster.
                             type: string
+                          replicas:
+                            description: Replicas in target cluster
+                            type: integer
                         type: object
                       type: array
                     name:
