--- a/charts/stellaris-core/crds/multicluster.harmonycloud.cn_multiclusterresourceoverrides.yaml
+++ b/charts/stellaris-core/crds/multicluster.harmonycloud.cn_multiclusterresourceoverrides.yaml
@@ -6,14 +6,14 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.7.0
   creationTimestamp: null
-  name: multiclusterresourcebindings.multicluster.harmonycloud.cn
+  name: multiclusterresourceoverrides.multicluster.harmonycloud.cn
 spec:
   group: multicluster.harmonycloud.cn
   names:
-    kind: MultiClusterResourceBinding
-    listKind: MultiClusterResourceBindingList
-    plural: multiclusterresourcebindings
-    singular: multiclusterresourcebinding
+    kind: MultiClusterResourceOverride
+    listKind: MultiClusterResourceOverrideList
+    plural: multiclusterresourceoverrides
+    singular: multiclusterresourceoverride
   scope: Namespaced
   versions:
   - name: v1alpha1
@@ -34,51 +34,45 @@ spec:
             type: object
           spec:
             properties:
-              resources:
-                items:
-                  properties:
-                    clusters:
-                      items:
-                        properties:
-                          name:
-                            description: Name of target cluster.
-                            type: string
-                          replicas:
-                            description: Replicas in target cluster
-                            type: integer
-                        type: object
-                      type: array
-                    name:
-                      type: string
-                  type: object
-                type: array
-            type: object
-          status:
-            properties:
               clusters:
                 items:
                   properties:
-                    binding:
-                      type: string
-                    message:
-                      type: string
                     name:
-                      type: string
-                    observedReceiveGeneration:
-                      format: int64
-                      type: integer
-                    phase:
-                      type: string
-                    resource:
-                      type: string
+                      items:
+                        type: string
+                      type: array
+                    overrides:
+                      items:
+                        properties:
+                          op:
+                            type: string
+                          path:
+                            type: string
+                          value:
+                            x-kubernetes-preserve-unknown-fields: true
+                        type: object
+                      type: array
+                  required:
+                  - name
+                  - overrides
                   type: object
                 type: array
+              resources:
+                properties:
+                  name:
+                    items:
+                      type: string
+                    type: array
+                required:
+                - name
+                type: object
+            required:
+            - clusters
+            - resources
             type: object
         type: object
     served: true
     storage: true
-    subresources:
-      status: {}
 status:
   acceptedNames:
     kind: ""
