--- a/charts/stellaris-core/templates/core/deployment.yaml
+++ b/charts/stellaris-core/templates/core/deployment.yaml
@@ -26,7 +26,6 @@ spec:
         - --listen-port=8080
         - --webhook-cert-dir=/etc/k8s-webhook-certs
         - --webhook-port=9443
-        - --cue-template-config-map={{ .Release.Namespace }}/{{ .Release.Name }}-cue-template
         volumeMounts:
         - mountPath: /etc/k8s-webhook-certs
           name: webhook-certs
@@ -39,10 +38,16 @@ spec:
       nodeSelector:
       {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.affinity }}
       affinity:
-      {{- toYaml . | nindent 8 }}
-      {{- end }}
+        podAntiAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            - labelSelector:
+                matchExpressions:
+                  - key: app
+                    operator: In
+                    values:
+                      - {{ .Release.Name }}-core
+              topologyKey: "kubernetes.io/hostname"
       {{- with .Values.tolerations }}
       tolerations:
       {{- toYaml . | nindent 8 }}
