--- a/kube/crd/bases/multicluster.harmonycloud.cn_multiclusterresourceschedulepolicies.yaml
+++ b/kube/crd/bases/multicluster.harmonycloud.cn_multiclusterresourceschedulepolicies.yaml
@@ -51,6 +51,7 @@ spec:
                 properties:
                   properties:
                     type: object
+                    x-kubernetes-preserve-unknown-fields: true
                   url:
                     type: string
                 type: object
